# 2023_1_Codex

./: .gitignore  CMakeLists.txt  README.md
PaddleOCR/deploy/cpp_infer/: CMakeLists.txt
PaddleOCR/deploy/cpp_infer/include/: ocr.hpp  ocr_cls.h  ocr_rec.h  paddleocr.h  preprocess_op.h  utility.h
PaddleOCR/deploy/cpp_infer/src/: main.cpp  ocr.cpp  ocr_cls.cpp  ocr_rec.cpp  paddleocr.cpp  preprocess_op.cpp  utility.cpp
client/: CMakeLists.txt
client/include/: Client.hpp  Exceptions.hpp  MainWindow.hpp  MatrixInputForm.hpp  MatrixWindow.hpp  ProblemType.hpp  ProblemTypeWindow.hpp  SolutionWindow.hpp  TaskInfo.hpp  UI_MainWindow.hpp  UsageWindow.hpp  client.hpp  exceptions.hpp  mainwindow.hpp  matrixwindow.hpp  problemType.hpp  problemtypewindow.hpp  solutionwindow.hpp  taskInfo.hpp  ui_mainwindow.hpp  ui_problemtypewindow.hpp  ui_solutionwindow.hpp  ui_usagewindow.hpp  uploadwindow.hpp  usagewindow.hpp
client/src/: Client.cpp  MainWindow.cpp  MatrixInputForm.cpp  ProblemTypeWindow.cpp  SolutionWindow.cpp  UsageWindow.cpp  client.cpp  main.cpp  mainwindow.cpp  problemtypewindow.cpp  solutionwindow.cpp  usagewindow.cpp
client/ui/: MainWindow.ui  ProblemTypeWindow.ui  SolutionWindow.ui  UsageWindow.ui  mainwindow.ui
interface/: CMakeLists.txt  client.cpp  client.hpp  exceptions.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  problemType.h  problemtypewindow.cpp  problemtypewindow.h  problemtypewindow.ui  solutionwindow.cpp  solutionwindow.h  solutionwindow.ui  ui_problemtypewindow.h  ui_solutionwindow.h  ui_usagewindow.h  usagewindow.cpp  usagewindow.h  usagewindow.ui
models/: recognizer.pdmodel
server/: CMakeLists.txt
server/include/: ArithmeticTask.hpp  Calculations.hpp  CombinatoricsTask.hpp  DifferentiationTask.hpp  EqSystemsTask.hpp  EquationsTask.hpp  Exceptions.hpp  IHandler.hpp  IMatStatTask.hpp  ITask.hpp  ITaskSearcher.hpp  IntegrationTask.hpp  Listener.hpp  LogicalExpressionTask.hpp  MatStatSequenceTask.hpp  MatrixTask.hpp  NumberSystemsTask  PredictionConverter.hpp  Server.hpp  Session.hpp  SessionManager.hpp  TaskHandler.hpp  TaskInfo.hpp  TaskSearcher.hpp  TextRecognizer.hpp  exceptions.hpp  listener.hpp  matStatSequenceTask.hpp  requestHandler.hpp  server.hpp  session.hpp  taskHandler.hpp  taskInfo.hpp  taskSearcher.hpp
server/src/: ArithmeticTask.cpp  CombinatoricsTask.cpp  DifferentiationTask.cpp  EqSystemsTask.cpp  EquationsTask.cpp  IntegrationTask.cpp  Listener.cpp  MatStatSequenceTask.cpp  MatrixTask.cpp  PredictionConverter.cpp  RequestHandler.cpp  Server.cpp  Session.cpp  SessionManager.cpp  TaskHandler.cpp  TaskSearcher.cpp  TextRecognizer.cpp  listener.cpp  main.cpp  matStatSequenceTask.cpp  requestHandler.cpp  server.cpp  session.cpp  taskHandler.cpp  taskSearcher.cpp
server/tests/: CMakeList.txt  CMakeLists.txt
server/tests/src/: testArithmeticTask.cpp  testCombinatoricsTask.cpp  testDifferentiationTask.cpp  testEqSystemsTask.cpp  testEquationsTask.cpp  testIntegrationsTask.cpp  testLogicalExpressionTask.cpp  testMatStatSequenceTask.cpp  testMatrixTask.cpp  testNumberSystemsTask.cpp  testTaskSearcher.cpp
